fix alignment on resume
fix alignment on resume

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -167,7 +167,6 @@ div.desc {
    float:left;
    text-align: right;
    padding-right: 30px;
-   margin-top: -29px;
 }
 
 #resume {
